k8s/infrastructure/network-policies/overlays/talos-cilium/cnp-filebrowser.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-filebrowser-ingress
  namespace: filebrowser
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
